fix: change swagger for new database
